# backtesting

./: .gitignore  README.md  config.py  optimize.py  pyproject.toml  run_backtest.py
indicators/: mfi.py
strategies/: __init__.py  ada_mfi.py
